--- a/Styles/exerc1.css
+++ b/Styles/exerc1.css
@@ -81,3 +81,23 @@
 .ntf {
   color: #9245F3;
 }
+
+.questionario {
+  display: flex;
+  padding: 24px 32px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 64px;
+  align-self: stretch;
+  border-radius: 8px;
+  background: #FFF;
+}
+
+.questao1 {
+  display: flex;
+  align-items: flex-start;
+  gap: 12px;
+  align-self: stretch;
+  flex-direction: column;
+}
